--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.40.0",
+    "react-native-action-button": "^2.0.20",
     "realm": "^0.15.4"
   },
   "devDependencies": {
